frame/support/test/tests/pallet_ui/genesis_001.stderr
error: Invalid pallet::module_interface, expect impl<..> GenesisBuilder<..> for GenesisConfig<..>
  --> $DIR/genesis_001.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
